# CommissionCalc

./: AGENTS.md  README.md  README.zh.md  main.py  pyproject.toml  requirements.txt
docs/: requirements.md  terminology.md
docs/design/: README.md  ui-design.md
docs/plans/: 2026-04-11-commissioncalc-init.md  2026-04-12-v0.3.0-gm-export-order.md  2026-04-12-v0.4.0-new-roles-sales-champion.md
docs/workflow/: README.md
scripts/: build.ps1  setup-venv.ps1
src/models/: __init__.py  commission.py  config.py  group.py  person.py  role.py
src/repositories/: config_repo.py  excel_repo.py  export_order_repo.py  people_repo.py
src/services/: calculator.py
src/ui/: dialogs.py  export_dialog.py  main_window.py  text_import_dialog.py  utils.py
src/utils/: logger.py
tests/models/: test_commission.py  test_config.py  test_group.py  test_person.py  test_role.py
tests/repositories/: test_config_repo.py  test_excel_repo.py  test_export_order_repo.py  test_people_repo.py
tests/services/: test_calculator_bonus.py  test_calculator_complete.py  test_calculator_management.py  test_calculator_personal.py  test_calculator_team.py  test_commission_result.py
