[project]
name = "commissioncalc"
version = "0.4.0"
description = "Performance commission calculation tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ts-sound"}
]
keywords = ["commission", "calculator", "performance", "tkinter"]

dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0"
]
build = [
    "pyinstaller>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/Ts-sound/CommissionCalc"
Repository = "https://github.com/Ts-sound/CommissionCalc"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.models", "src.services", "src.repositories", "src.ui", "src.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]